// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trips.tsx snapshots > driver dashboard — hero ride card over segmented lists 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <ScrollView
    contentContainerStyle={
      {
        "gap": 12,
        "padding": 16,
        "paddingBottom": 40,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "marginTop": 5,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 17,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Fraunces_600SemiBold",
                "fontSize": 27,
                "letterSpacing": -0.3,
                "lineHeight": 31.049999999999997,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "textAlign": "center",
              },
            ]
          }
        >
          trips:title
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          trips:subtitle
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="trips:notificationsAria"
        accessibilityRole="button"
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#14201B"
          importantForAccessibility="no-hide-descendants"
          name="notifications-outline"
          size={20}
        />
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "gap": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#5B6572",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        trips:nextRide
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 16,
              "borderWidth": 1,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#EDEBE1",
                "borderRadius": 16,
                "overflow": "hidden",
                "position": "relative",
              },
              {
                "height": 128,
              },
              {
                "borderTopLeftRadius": 16,
                "borderTopRightRadius": 16,
              },
            ]
          }
        >
          <MapView
            customMapStyle={[]}
            initialRegion={
              {
                "latitude": 36.316050000000004,
                "latitudeDelta": 1.5694399999999975,
                "longitude": 10.4092,
                "longitudeDelta": 0.7286400000000015,
              }
            }
            onMapReady={[Function]}
            pitchEnabled={false}
            pointerEvents="none"
            provider="default"
            rotateEnabled={false}
            scrollEnabled={false}
            style={{}}
            userInterfaceStyle="light"
            zoomEnabled={false}
          >
            <Marker
              anchor={
                {
                  "x": 0.5,
                  "y": 0.5,
                }
              }
              coordinate={
                {
                  "latitude": 36.8065,
                  "longitude": 10.1815,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderColor": "#FFFFFF",
                      "borderRadius": 6,
                      "borderWidth": 2,
                      "height": 12,
                      "width": 12,
                    },
                    {
                      "backgroundColor": "#7FA491",
                    },
                  ]
                }
              />
            </Marker>
            <Marker
              anchor={
                {
                  "x": 0.5,
                  "y": 0.5,
                }
              }
              coordinate={
                {
                  "latitude": 35.8256,
                  "longitude": 10.6369,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderColor": "#FFFFFF",
                      "borderRadius": 6,
                      "borderWidth": 2,
                      "height": 12,
                      "width": 12,
                    },
                    {
                      "backgroundColor": "#2E3B42",
                    },
                  ]
                }
              />
            </Marker>
          </MapView>
          <View
            pointerEvents="none"
            style={
              {
                "backgroundColor": "#EDEBE1",
                "opacity": 0.18,
              }
            }
          />
          <Animated.View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "backgroundColor": "#EAE7DC",
                },
                {
                  "borderRadius": 0,
                  "height": 16,
                  "opacity": AnimatedValue {
                    "value": 0.45,
                  },
                  "width": "100%",
                },
                {},
              ]
            }
          />
          <View
            style={
              {
                "backgroundColor": "#2E3B42",
                "borderRadius": 9999,
                "left": 8,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
                "position": "absolute",
                "top": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#F3F1E9",
                  "fontSize": 12,
                  "fontWeight": "600",
                }
              }
            >
              booking:status_published
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "gap": 2,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 24,
                      "fontWeight": "600",
                      "lineHeight": 28.799999999999997,
                    },
                    {
                      "color": "#14201B",
                      "textAlign": undefined,
                      "writingDirection": "ltr",
                    },
                    undefined,
                  ]
                }
              >
                Tunis → Sousse
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "fontWeight": "400",
                      "lineHeight": 21,
                    },
                    {
                      "color": "#5B6572",
                      "textAlign": undefined,
                      "writingDirection": "ltr",
                    },
                    undefined,
                  ]
                }
              >
                dim. 23 août · 8:30 AM • trips:seatsAvailable
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-end",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 24,
                      "fontWeight": "600",
                      "lineHeight": 28.799999999999997,
                    },
                    {
                      "color": "#14201B",
                      "textAlign": undefined,
                      "writingDirection": "ltr",
                    },
                    undefined,
                  ]
                }
              >
                12,50 DT
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 18,
                    },
                    {
                      "color": "#5B6572",
                      "textAlign": undefined,
                      "writingDirection": "ltr",
                    },
                    undefined,
                  ]
                }
              >
                trips:perSeat
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "width": 14,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "borderWidth": 2,
                      "height": 12,
                      "width": 12,
                    },
                    {
                      "borderColor": "#14201B",
                    },
                  ]
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "marginVertical": 2,
                      "minHeight": 20,
                      "width": 2,
                    },
                    {
                      "backgroundColor": "#E4EDFB",
                    },
                  ]
                }
              />
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 12,
                      "width": 12,
                    },
                    {
                      "backgroundColor": "#2E9E6C",
                    },
                  ]
                }
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "gap": 1,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 12,
                        "fontWeight": "400",
                        "lineHeight": 18,
                      },
                      {
                        "color": "#5B6572",
                        "textAlign": undefined,
                        "writingDirection": "ltr",
                      },
                      undefined,
                    ]
                  }
                >
                  8:30 AM
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                      {
                        "color": "#14201B",
                        "textAlign": undefined,
                        "writingDirection": "ltr",
                      },
                      undefined,
                    ]
                  }
                >
                  Tunis
                </Text>
              </View>
              <View
                style={
                  {
                    "gap": 1,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 12,
                        "fontWeight": "400",
                        "lineHeight": 18,
                      },
                      {
                        "color": "#5B6572",
                        "textAlign": undefined,
                        "writingDirection": "ltr",
                      },
                      undefined,
                    ]
                  }
                >
                  10:30 trips:estimated
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                      {
                        "color": "#14201B",
                        "textAlign": undefined,
                        "writingDirection": "ltr",
                      },
                      undefined,
                    ]
                  }
                >
                  Sousse
                </Text>
              </View>
            </View>
          </View>
          <Pressable
            accessibilityLabel="trips:manageRide"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": false,
                "disabled": false,
              }
            }
            disabled={false}
            onPress={[Function]}
            style={[Function]}
          >
            <Text
              style={
                [
                  {
                    "fontWeight": "600",
                  },
                  {
                    "fontSize": 16,
                  },
                  {
                    "color": "#0D1512",
                  },
                ]
              }
            >
              trips:manageRide
            </Text>
          </Pressable>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "marginTop": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#5B6572",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        trips:recentRides
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "flexDirection": "row",
              "padding": 4,
            },
            {
              "backgroundColor": "#E4EDFB",
            },
          ]
        }
      >
        <TouchableOpacity
          accessibilityLabel="trips:segmentDriver"
          accessibilityRole="tab"
          accessibilityState={
            {
              "selected": true,
            }
          }
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#FFFFFF",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "600",
                },
              ]
            }
          >
            trips:segmentDriver
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityLabel="trips:segmentRider"
          accessibilityRole="tab"
          accessibilityState={
            {
              "selected": false,
            }
          }
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#5B6572",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            trips:segmentRider
          </Text>
        </TouchableOpacity>
      </View>
    </View>
    <View
      style={
        {
          "gap": 8,
        }
      }
    >
      <TouchableOpacity
        accessibilityLabel="Tunis → Sousse, sam. 15 août · 8:30 AM, booking:status_completed"
        accessibilityRole="button"
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          [
            {
              "borderRadius": 16,
              "borderWidth": 1,
              "gap": 8,
              "padding": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
            {
              "opacity": 0.75,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "700",
                },
              ]
            }
          >
            sam. 15 août · 8:30 AM
          </Text>
          <View
            accessibilityLabel="booking:status_completed"
            accessibilityRole="text"
            accessible={true}
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "borderRadius": 9999,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                {
                  "backgroundColor": "#E4EDFB",
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#4A7C8C",
                  },
                ]
              }
            >
              booking:status_completed
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "width": 14,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 6,
                    "borderWidth": 2,
                    "height": 12,
                    "width": 12,
                  },
                  {
                    "borderColor": "#14201B",
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "flex": 1,
                    "marginVertical": 2,
                    "minHeight": 20,
                    "width": 2,
                  },
                  {
                    "backgroundColor": "#E4EDFB",
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "borderRadius": 6,
                    "height": 12,
                    "width": 12,
                  },
                  {
                    "backgroundColor": "#2E9E6C",
                  },
                ]
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
                "gap": 8,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#14201B",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Tunis
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#14201B",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Sousse
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "space-between",
                "paddingTop": 8,
              },
              {
                "borderTopColor": "#E4EDFB",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "gap": 4,
              }
            }
          >
            <Ionicons
              accessibilityElementsHidden={true}
              color="#5B6572"
              importantForAccessibility="no-hide-descendants"
              name="people-outline"
              size={16}
            />
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 21,
                  },
                  {
                    "color": "#5B6572",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              trips:placesReserved
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            12,50 DT
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </ScrollView>
</SafeAreaView>
`;

exports[`trips.tsx snapshots > first run — no bookings, no profile, rider empty state 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <ScrollView
    contentContainerStyle={
      {
        "gap": 12,
        "padding": 16,
        "paddingBottom": 40,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "marginTop": 5,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 17,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Fraunces_600SemiBold",
                "fontSize": 27,
                "letterSpacing": -0.3,
                "lineHeight": 31.049999999999997,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "textAlign": "center",
              },
            ]
          }
        >
          trips:title
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          trips:subtitle
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="trips:notificationsAria"
        accessibilityRole="button"
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#14201B"
          importantForAccessibility="no-hide-descendants"
          name="notifications-outline"
          size={20}
        />
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "marginTop": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#5B6572",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        trips:recentRides
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "flexDirection": "row",
              "padding": 4,
            },
            {
              "backgroundColor": "#E4EDFB",
            },
          ]
        }
      >
        <TouchableOpacity
          accessibilityLabel="trips:segmentDriver"
          accessibilityRole="tab"
          accessibilityState={
            {
              "selected": false,
            }
          }
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#5B6572",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            trips:segmentDriver
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityLabel="trips:segmentRider"
          accessibilityRole="tab"
          accessibilityState={
            {
              "selected": true,
            }
          }
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#FFFFFF",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "600",
                },
              ]
            }
          >
            trips:segmentRider
          </Text>
        </TouchableOpacity>
      </View>
    </View>
    <View
      style={
        {
          "gap": 8,
        }
      }
    >
      <View
        accessibilityRole="text"
        accessible={true}
        style={
          {
            "alignItems": "center",
            "gap": 8,
            "padding": 20,
          }
        }
      >
        <View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#8B93A3"
            importantForAccessibility="no-hide-descendants"
            name="search-outline"
            size={32}
          />
        </View>
        <Text
          style={
            [
              {
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 28.799999999999997,
              },
              {
                "color": "#26333A",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              {
                "marginTop": 4,
              },
            ]
          }
        >
          trips:riderEmpty.noBookings
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              {
                "color": "#7A8288",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              {
                "marginBottom": 4,
              },
            ]
          }
        >
          trips:riderEmpty.noBookingsDesc
        </Text>
        <Pressable
          accessibilityLabel="trips:riderEmpty.findRide"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "disabled": false,
            }
          }
          disabled={false}
          onPress={[Function]}
          style={[Function]}
        >
          <Text
            style={
              [
                {
                  "fontWeight": "600",
                },
                {
                  "fontSize": 16,
                },
                {
                  "color": "#2E3B42",
                },
              ]
            }
          >
            trips:riderEmpty.findRide
          </Text>
        </Pressable>
      </View>
    </View>
  </ScrollView>
</SafeAreaView>
`;

exports[`trips.tsx snapshots > rider view — booking card shows the real driver as counterpart 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <ScrollView
    contentContainerStyle={
      {
        "gap": 12,
        "padding": 16,
        "paddingBottom": 40,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "marginTop": 5,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 17,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Fraunces_600SemiBold",
                "fontSize": 27,
                "letterSpacing": -0.3,
                "lineHeight": 31.049999999999997,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "textAlign": "center",
              },
            ]
          }
        >
          trips:title
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              {
                "color": "#5B6572",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          trips:subtitle
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="trips:notificationsAria"
        accessibilityRole="button"
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#14201B"
          importantForAccessibility="no-hide-descendants"
          name="notifications-outline"
          size={20}
        />
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "marginTop": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#5B6572",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        trips:recentRides
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "flexDirection": "row",
              "padding": 4,
            },
            {
              "backgroundColor": "#E4EDFB",
            },
          ]
        }
      >
        <TouchableOpacity
          accessibilityLabel="trips:segmentDriver"
          accessibilityRole="tab"
          accessibilityState={
            {
              "selected": false,
            }
          }
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              null,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#5B6572",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            trips:segmentDriver
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityLabel="trips:segmentRider"
          accessibilityRole="tab"
          accessibilityState={
            {
              "selected": true,
            }
          }
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
              {
                "backgroundColor": "#FFFFFF",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "600",
                },
              ]
            }
          >
            trips:segmentRider
          </Text>
        </TouchableOpacity>
      </View>
    </View>
    <View
      style={
        {
          "gap": 8,
        }
      }
    >
      <TouchableOpacity
        accessibilityLabel="Tunis → Hammamet, dim. 23 août · 8:30 AM, booking:status_accepted"
        accessibilityRole="button"
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          [
            {
              "borderRadius": 16,
              "borderWidth": 1,
              "gap": 8,
              "padding": 12,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E4EDFB",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "700",
                },
              ]
            }
          >
            dim. 23 août · 8:30 AM
          </Text>
          <View
            accessibilityLabel="booking:status_accepted"
            accessibilityRole="text"
            accessible={true}
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "borderRadius": 9999,
                  "paddingHorizontal": 8,
                  "paddingVertical": 4,
                },
                {
                  "backgroundColor": "#8FD9B4",
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#22794F",
                  },
                ]
              }
            >
              booking:status_accepted
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "width": 14,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 6,
                    "borderWidth": 2,
                    "height": 12,
                    "width": 12,
                  },
                  {
                    "borderColor": "#14201B",
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "flex": 1,
                    "marginVertical": 2,
                    "minHeight": 20,
                    "width": 2,
                  },
                  {
                    "backgroundColor": "#E4EDFB",
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "borderRadius": 6,
                    "height": 12,
                    "width": 12,
                  },
                  {
                    "backgroundColor": "#2E9E6C",
                  },
                ]
              }
            />
          </View>
          <View
            style={
              {
                "flex": 1,
                "gap": 8,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#14201B",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Tunis
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#14201B",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              Hammamet
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "space-between",
                "paddingTop": 8,
              },
              {
                "borderTopColor": "#E4EDFB",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "gap": 4,
              }
            }
          >
            <View
              accessibilityLabel="Photo de Amine Ben Salah"
              accessibilityRole="image"
              accessible={true}
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "backgroundColor": "#E4EDFB",
                    "borderRadius": 14,
                    "height": 28,
                    "width": 28,
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontWeight": "600",
                    },
                    {
                      "color": "#14201B",
                      "fontSize": 11,
                    },
                  ]
                }
              >
                AB
              </Text>
            </View>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 21,
                  },
                  {
                    "color": "#5B6572",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              Amine Ben Salah
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "lineHeight": 21,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            21 DT
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </ScrollView>
</SafeAreaView>
`;
